# BlazeEVM

./: ARCHITECTURE.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: account.rs  block.rs  chain.rs  lib.rs  state.rs
node/: Cargo.toml
node/src/: main.rs
